Updates from Overleaf

--- a/Leadership & Activities/example1.tex
+++ b/Leadership & Activities/example1.tex
@@ -1,4 +1,4 @@
-\begin{cveducation}
+\begin{cvexperience}
 {Organization 1}
 {Title}
 {Location}
@@ -6,4 +6,4 @@
 
 \listitem \lipsum[66] 
 
-\end{cveducation}
+\end{cvexperience}
