--- a/Projects/example1.tex
+++ b/Projects/example1.tex
@@ -1,9 +1,7 @@
-\begin{cveducation}
-{}
+\begin{cvproject}
 {Project}
-{Location}
 {start year -- end year}
 
 \listitem \lipsum[66]
 
-\end{cveducation}
+\end{cvproject}
