--- a/Professional Experience/example2.tex
+++ b/Professional Experience/example2.tex
@@ -1,4 +1,4 @@
-\begin{cveducation}
+\begin{cvexperience}
 {Company 2}
 {Title}
 {Location}
@@ -7,4 +7,4 @@
 \listitem \lipsum[66] 
 \listitem \lipsum[66]
 
-\end{cveducation}
+\end{cvexperience}
