--- a/Projects/example2.tex
+++ b/Projects/example2.tex
@@ -1,9 +1,7 @@
-\begin{cveducation}
-{}
-{Project}
-{Location}
+\begin{cvproject}
+{Project 2}
 {start year -- end year}
 
 \listitem \lipsum[66]
 
-\end{cveducation}
+\end{cvproject}
