Updates from Overleaf

--- a/CV.tex
+++ b/CV.tex
@@ -22,6 +22,7 @@
 \begin{cvsection}{Projects}
     \import{Projects/}{example1.tex}
     \import{Projects/}{example2.tex}
+    \import{Projects/}{example3.tex}
 \end{cvsection}
 
 \begin{cvsection}{Skills \& Interests}
@@ -34,11 +35,11 @@
 \end{cv}
 
 \begin{coverletter}
-  Dear Recruiting team,
-  \medskip \newline 
-  \lipsum
-  \begin{contactdetails}
-  \end{contactdetails}
+    \import{Cover Letter/}{intro.tex}
+    \newline
+    \import{Cover Letter/}{interest_in_company.tex}
+    \begin{contactdetails}
+    \end{contactdetails}
 \end{coverletter}
 
 \end{document}
