Optional LinkedIn & GitHub in header & signature

--- a/CV.tex
+++ b/CV.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\header{Your name}{Phone}{Email}{LinkedIn}
+\header{Your name}{Phone}{Email}{LinkedIn}{GitHub}
 
 \begin{cv}
 \begin{cvsection}{Education}
